# demai-app-advanced

./: .eslintrc.json  .gitignore  .prettierrc  README.md  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  test-format.js
.claude/: settings.local.json
.cursor/rules/: general.mdc
backend/: Dockerfile  PORTFOLIO_SERVICE.md  aave_strategy.py  assistant.py  config.py  keychain.py  main.py  portfolio_service.py  pyproject.toml  setup.py  strategies.py  strategy_config.py  test_langchain.py  test_portfolio.py  test_strategies.py
backend/crew/: __init__.py  chatbot_crew.py
backend/services/: assistant.py  portfolio_service.py
backend/strategies/: __init__.py  aave_strategy.py  strategies.py  strategy_config.py
backend/test/: test_portfolio.py  test_strategies.py
backend/utils/: async_utils.py  coingecko_util.py  json_parser.py  mongo_util.py  portfolio_service.py
docs/: MVP_ROADMAP.md  STEP_1_2_STRUCTURAL_ANALYSIS_SUMMARY.md  STEP_1_3_COMPONENT_CATEGORIZATION_SUMMARY.md  TERRAIN_IMPLEMENTATION_PLAN.md  TOPOGRAPHIC_INTERPRETATION_CORRECTION.md  demai.md  implementation.md  mvp.md  process_new_chain.md  todo.md
scripts/: color_analysis.py  color_analysis_results.json  color_analysis_simple.py  component_categorization.py  component_categorization_results.json  manual_terrain_analysis.py  manual_terrain_analysis_results.json  structural_analysis.py  structural_analysis_results.json  topographic_analysis.py  topographic_features.json
src/archive/: ExpandedCard.tsx  WireframeOverlay.tsx
src/components/: AutomationIndicator.tsx  CircularProgress.tsx  DashboardCard.tsx  DemAIVisor.tsx  DemaiAuthHandler.tsx  DemaiChat.tsx  DemaiChatInterface.tsx  DemaiConnectModal.tsx  DemaiLayout.tsx  DemaiNavbar.tsx  DemaiPipelineMap.tsx  DemaiTerminal.tsx  ExpandedCard.tsx  FlowingChart.tsx  Portfolio.tsx  PortfolioRefreshButton.tsx  SideTabButton.tsx  (+6 more)
(+36 files in other folders)
