[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "jdorado",email = "juancamilo.dorado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "langchain (>=0.3.0,<0.4.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "pymongo (>=4.12.1,<5.0.0)",
    "web3 (>=7.11.0,<8.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
